plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.5'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com'
version = '0.0.1-SNAPSHOT'
description = 'findex'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'


    // OpenAPI(Swagger UI)
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'

    // 유틸
    implementation 'org.apache.commons:commons-lang3:3.18.0'

    // Postgresql 드라이버
    runtimeOnly 'org.postgresql:postgresql'

    // MapStruct
    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

    // env 자동 로드
    implementation 'me.paulschwarz:spring-dotenv:3.0.0'

    // @ConfigurationProperties 메타데이터
    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"

    // Devtools
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // QueryDSL JPA
    implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'

    // QueryDSL Annotation Processor
    annotationProcessor 'com.querydsl:querydsl-apt:5.1.0:jakarta'
    annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
    annotationProcessor 'jakarta.persistence:jakarta.persistence-api'

    // OpenCSV
    implementation 'com.opencsv:opencsv:5.12.0'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}


tasks.named('test') {
    useJUnitPlatform()
}
